fixed headline spacing under images

--- a/css/style.scss
+++ b/css/style.scss
@@ -177,7 +177,7 @@ body {
 #photos {
   padding: 3em 0;
   img {
-    padding: 2em 0 1.5em 0;
+    padding: 2em 0 0em 0;
   }
   h2 {
     text-align: left;
